Add responsive grid

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="small" class="screen-text hide">
+    <div id="small" class="screen-text">
         <h2>Small Screen</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente fugit totam et asperiores! Impedit, nesciunt odit deleniti inventore odio enim amet modi itaque, facilis et earum quod? Rem, quam unde!</p>
     </div>
-    <div id="medium" class="screen-text hide">
+    <div id="medium" class="screen-text">
         <h2>Medium Screen</h2>
         <p>Maxime consectetur esse doloribus quis iure sit nisi quaerat consequuntur suscipit tempore! Recusandae, laborum. Molestiae dolorem quod praesentium. Architecto accusantium dolorem ullam fugiat veritatis odit dignissimos cumque, obcaecati labore repellendus.</p>
     </div>
-    <div id="large" class="screen-text hide">
+    <div id="large" class="screen-text">
         <h2>Large Screen</h2>
         <p>Officia dolores soluta facere quidem saepe suscipit ullam voluptatem. Eos adipisci facilis, ex recusandae voluptatem commodi debitis laudantium ullam. Tempora tempore reiciendis vitae sequi ex repudiandae consequuntur est, quae officia.</p>
     </div>
